Fixes layout issues

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ h2 {
     flex-direction: column;
     justify-content: center;
     align-content: stretch;
-    max-width: 500px;
+    padding: 30px;
 }
 
 .container > * {
